--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <br />
         <p><b> Text Atau Number Untuk Memunculkan Suara </b></p>
         <!-- play sound -->
-        <input class="play1" placeholder="Text" id="message" type="text" />
+        <input class="play1" placeholder="Ketik Disini" id="message" type="text" />
         <br />
         <button class="play" onclick="play()">Play</button>
         <!-- akhir sound -->
