--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
         <h4><b>@gmail.bitcoin</b></h4>
       </div>
     </div>
+        <div class="container">
+      <div class="sun"></div>
+      <div class="earth">
+        <div class="moon"></div>
+      </div>
+    </div>
     <!-- java sound -->
     <script>
       const speech = new SpeechSynthesisUtterance();
