--- a/index.html
+++ b/index.html
@@ -10,9 +10,21 @@
   </head>
   <body>
     <div class="left-container">
+      <!-- anime -->
+      <div class="container">
+        <div class="sun"></div>
+        <div class="earth">
+          <div class="moon"></div>
+        </div>
+      </div>
+      <!-- akhir anime -->
       <div class="photo-contact">
         <img src="b.jpg" class="photo" />
-          <h1 id="hp">Contact Me</h1>
+        <div class="kaspe">
+          <br />
+          <br />
+          <br />
+          <h1>Contact Me</h1>
           <a onclick="window.open('https://t.me/+123456789');">
             <button class="button-1">Email</button>
           </a>
@@ -90,14 +102,6 @@
         <h4><b>@gmail.bitcoin</b></h4>
       </div>
     </div>
-    <!-- anime -->
-    <div class="container">
-      <div class="sun"></div>
-      <div class="earth">
-        <div class="moon"></div>
-      </div>
-    </div>
-    <!-- akhir anime -->
     <!-- java sound -->
     <script>
       const speech = new SpeechSynthesisUtterance();
